--- a/css/section.css
+++ b/css/section.css
@@ -431,7 +431,7 @@
 
 @media (max-width: 700px) {
   .layout_container {
-    padding: 0 20px;
+    padding: 0 0px;
   }
 
   .section_title {
